<resources>
    <string name="app_name">买家端</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <!-- 异常信息 -->
    <string name="no_network_message">当前网络连接不可用</string>
    <string name="error_network_message">网络连接异常</string>
    <string name="error_200_network_message">解析异常</string>
    <string name="error_sql_message">数据库异常，请重新登录</string>

    <string name="loading_msg_wait">请稍候…</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="next">下一步</string>

    <string name="main_tab_index">首页</string>
    <string name="main_tab_found">发现</string>
    <string name="main_tab_live">直播</string>
    <string name="main_tab_my">我的</string>
    <string name="sign_out">退出登录</string>

    <string name="view_all_orders">查看全部订单</string>
    <string name="orders_awaiting_payment">待付款</string>
    <string name="orders_awaiting_shipment">待发货</string>
    <string name="orders_awaiting_confirmation">待收货</string>
    <string name="dispute_orders">退款/售后</string>
    <string name="my_cart">我的购物车</string>
    <string name="my_demands">我的需求</string>
    <string name="my_reviews">我的评价</string>
    <string name="my_favorites">我的收藏</string>
    <string name="my_interests">我的关注</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="settings">设置</string>
    <string name="account_settings">个人中心</string>
    <string name="message_settings">消息设置</string>
    <string name="change_theme">主题换肤</string>
    <string name="clear_cache">清除缓存</string>
    <string name="have_been_cleared">已清理完成</string>
    <string name="about_us">关于我们</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="user_intro">个性签名</string>
    <string name="please_introduce_yourself">简单介绍下自己</string>
    <string name="please_input_user_intro">请输入个性签名</string>
    <string name="my_shipping_address">我的收货地址</string>
    <string name="security_center">安全中心</string>
    <string name="instant_message">即时消息</string>
    <string name="system_message">系统消息</string>
    <string name="link_phone">绑定手机</string>
    <string name="phone_not_linked_yet">当前未绑定手机</string>
    <string name="reset_login_password">重置登录密码</string>
    <string name="pay_password">支付密码</string>


    <!--需求相关-->
    <string name="publish_ok">确定付款</string>
    <string name="publish_require">发布需求</string>
    <string name="require_disc">描述一下您的需求，例如颜色、尺寸等</string>
    <string name="require_budget">需求预算</string>
    <string name="require_finish_time">完成时间</string>
    <string name="select_finish_time">请选择完成时间</string>
    <string name="require_type">类型</string>
    <string name="select_type">请选择商品类型</string>
    <string name="buy_place">购买地</string>
    <string name="select_place">请选择期望购买地</string>
    <string name="add_address">添加收货地址</string>
    <string name="require_warn">商品价格超过一万时建议选择鉴定寄送</string>
    <string name="identify_send">鉴定寄送</string>
    <string name="publishing">发布中</string>
    <string name="publish_success">发布成功</string>
    <string name="share_title">快分享给小伙伴吧</string>
    <string name="money_unit">￥</string>
    <string name="pay_method">付款方式</string>
    <string name="pay_price">支付金额</string>
    <string name="pay_confirm">确认支付</string>
    <string name="wechat">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="bank_pay">银行卡支付</string>
    <string name="expect_time">收货时间</string>
    <string name="reward">辛苦费</string>
    <string name="undo_require">取消需求</string>
    <string name="four_space">&#160;&#160;&#160;&#160;</string>
    <string name="two_space">&#160;&#160;</string>
    <string name="require_detail">需求详情</string>
    <string name="share_friend">快分享给朋友们吧</string>
    <string name="wechat_found">微信朋友圈</string>
    <string name="wechat_friend">微信好友</string>
    <string name="qqfriend">QQ好友</string>
    <string name="submit">提交</string>
    <string name="cancel_success">取消需求成功</string>
    <string name="require_cancel_rule">取消规则</string>
    <string name="cancel_confirm">确定取消</string>
    <string name="cancel_no">暂不取消</string>
    <string name="require_cancel_tip">取消需求后费用将在7个工作日内原路返回您的账户，取消后可在个人中心-下架需求内找到该需求</string>
    <string name="require_cancel_warning">请勿频繁取消，否则可能导致买手无法找到您的需求！</string>
    <string name="require_cancel_reason">请告诉我们取消原因，我们将加以改善</string>
    <string name="require_cancel_reason1">赶时间，不想等了</string>
    <string name="require_cancel_reason2">找不到满意的买手</string>
    <string name="require_cancel_reason3">通过其他方式买到了</string>
    <string name="budget_amount">预算金额</string>
    <string name="extra_reward">另加辛苦费</string>
    <string name="before_receive">前收到</string>
    <string name="price">价格:</string>
    <string name="cancel_over">已取消</string>
    <string name="delete_require">删除需求</string>
    <string name="edit_retry">编辑重发</string>
    <string name="my_require">我的需求</string>
    <string name="out_stock_require">下架需求</string>
    <string name="delete">删除</string>
    <string name="contact_seller">联系买手</string>
    <string name="order_detail">订单详情</string>
    <string name="confirm_seller_title">请确认您指定的买手</string>
    <string name="confirm_seller_msg">确认后将形成求购订单，为了保证买卖双方的利益，求购订单将无法取消哦</string>
    <string name="point_seller_success">指定买手成功</string>
    <string name="add_require">+发布新需求</string>
    <string name="order_receiving">正在接单</string>
    <string name="contact_buyer">联系买家</string>
    <string name="point_ta">指定TA</string>
    <string name="take_require">接需求</string>
    <string name="require">需求</string>

    <!--限定能输入的具体字符串-->
    <string name="digits_phone_num">@string/digits_num</string>
    <string name="digits_sms_code">@string/digits_num</string>
    <!--纯数字-->
    <string name="digits_num">0123456789</string>

    <!--订单相关-->
    <string name="publish_comment">发布评论</string>
    <string name="good_quality">商品质量</string>
    <string name="seller_service">买手服务</string>
    <string name="comment_disc">说说该商品的优点和美中不足的地方吧～</string>
    <string name="publish">发表</string>
    <string name="thank_comment">感谢评价</string>
    <string name="comment">评论</string>
    <string name="view_my_comments">查看我的评价</string>
    <string name="append_comment">写追评</string>


    <!--标签相关-->
    <string name="select_interest_tag">选择您感兴趣的商品类型</string>
    <string name="select_interest_hint">以便于我们为您提供合适您的行程、单品以及内容</string>
    <string name="immediate_enjoy">立即体验</string>
    <string name="select_ok">选好了</string>
    <string name="title_activity_recommend_buy">RecommendBuyActivity</string>

    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>
    <string name="time_more">99+</string>


    <!-- chat activity -->
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_audio_too_long">录音过长，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_pullback">撤回</string>
    <string name="chat_pullback_not_support">改会话不支持消息撤回</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="chat_typing">对方正在输入…</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="send_success">发送成功</string>

    <!-- home activity -->
    <string name="home_conversation_tab">会话</string>
    <string name="home_setting_tab">设置</string>

    <!-- conversation fragment -->
    <string name="conversation_system">系统消息</string>
    <string name="conversation_system_friend">新朋友</string>
    <string name="conversation_system_group">群组消息</string>
    <string name="conversation_del">删除会话</string>
    <string name="conversation_draft">[草稿]</string>

    <!-- contact fragment -->
    <string name="home_contact_tab">联系人</string>
    <string name="new_friend">新朋友</string>
    <string name="public_group">公开群</string>
    <string name="discuss_group">讨论组</string>
    <string name="chatroom">聊天室</string>
    <string name="addfriend">添加好友</string>
    <string name="contact_add_group">添加群组</string>
    <string name="manangergroup">管理分组</string>
    <string name="save_succ">保存成功</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="save_fail">保存失败</string>
    <string name="save_exist">文件已存在</string>


    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>


    <string name="search_require">搜索需求</string>
    <string name="travel">行程</string>
    <string name="complete_info_tip">完善个人资料，提升您的个人形象。</string>
    <string name="send_trip">发行程</string>
    <string name="send_trip_tip">接需求前需要先发行程哦～</string>
    <string name="confirm_take_require">确定受理</string>
    <string name="submit_application_success">提交申请成功</string>


    <!--商品详情页-->
    <string name="product_detail_comment_num">商品评价 (%d)</string>
    <string name="product_detail_no_comment">暂无评论哟～</string>
    <string name="product_detail_look_comment">查看全部评价</string>
    <string name="product_detail_service">服务</string>
    <string name="product_detail_money_desc">运费说明</string>
    <string name="product_detail_send_product">承若购买后30天发货</string>
    <string name="product_detail_order_edit">订单编辑</string>
    <string name="product_detail_order_color">颜色</string>
    <string name="product_detail_order_size">尺寸</string>
    <string name="product_detail_sell_num">数量</string>
    <string name="product_order_confirm_ok">确认订单</string>
    <string name="add_bag">加入小背包</string>

    <!--消息模块-->
    <string name="message_activity_title">消息</string>
    <string name="message_system_message">系统消息</string>
    <string name="message_my_comment">我的评论</string>
    <string name="message_my_like">我的赞</string>
    <string name="message_system_message_read_all">阅读全文</string>
    <string name="message_my_comment_reply">回复了你</string>
    <string name="message_my_comment_comment">评论了你</string>
    <string name="title_activity_live">LiveActivity</string>

    <!--直播-->
    <string name="live_focus">关注</string>
    <string name="live_you_want_say">你想说什么</string>
    <string name="live_enter_buyer_main_pager">进入买手主页</string>
    <string name="live_red_bag_product_num">总共%d件宝贝</string>

</resources>
