<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/lay_my_linked_phone"
                style="@style/WideItem">

                <TextView
                    style="@style/WideItemLeftText"
                    android:layout_width="wrap_content"
                    android:text="@string/link_phone" />

                <TextView
                    android:id="@+id/tv_my_linked_phone"
                    style="@style/WideItemMiddleRightText"
                    android:text="@string/phone_not_linked_yet" />

                <ImageView style="@style/WideItemRightArrow" />
            </LinearLayout>

            <View style="@style/WideItemDivider" />

            <TextView
                android:id="@+id/tv_my_reset_login_password"
                style="@style/WideItem.Text.WithArrow"
                android:text="@string/reset_login_password" />

            <View style="@style/WideItemDivider" />

            <TextView
                android:id="@+id/tv_my_pay_password"
                style="@style/WideItem.Text.WithArrow"
                android:text="@string/pay_password" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
