<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/publish_frame">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/disc_context"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:hint="@string/require_disc"
                android:textColorHint="@color/txt_gray_light"
                android:gravity="top"
                android:textColor="@android:color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/txt_size_15"
                android:layout_marginTop="20dp"
                android:maxLength="40"
                />
            <com.smyy.sharetour.buyer.view.NoScrollGridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:horizontalSpacing="@dimen/space_size"
                android:numColumns="4"
                android:listSelector="@android:color/transparent"
                android:verticalSpacing="@dimen/space_size"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"/>

            <View style="@style/WideItemDivider"
                android:layout_height="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                />


            <LinearLayout
                style="@style/WideItem"
                android:paddingLeft="20dp"
                >

                <TextView
                    style="@style/WideItemLeftText"
                    android:text="@string/require_budget"
                    android:layout_width="100dp"
                    />

                <TextView
                    android:id="@+id/require_budget"
                    style="@style/WideItemMiddleRight.Text"
                    android:text="¥0"
                    android:gravity="left"
                    />

                <ImageView style="@style/WideItemRightArrow"
                    />
            </LinearLayout>

            <View style="@style/WideItemDivider"
                android:layout_marginRight="0dp"/>

            <LinearLayout
                style="@style/WideItem"
                android:paddingLeft="20dp">

                <TextView
                    style="@style/WideItemLeftText"
                    android:text="@string/require_finish_time"
                    android:layout_width="100dp"/>

                <TextView
                    android:id="@+id/require_finish_time"
                    android:text="@string/select_finish_time"
                    style="@style/WideItemMiddleRight.Text"
                    android:gravity="left"
                    />

                <ImageView style="@style/WideItemRightArrow"
                    />
            </LinearLayout>
            <View style="@style/WideItemDivider"
                android:layout_marginRight="0dp"/>

            <LinearLayout
                style="@style/WideItem"
                android:paddingLeft="20dp">

                <TextView
                    style="@style/WideItemLeftText"
                    android:layout_width="100dp"
                    android:text="@string/require_type" />

                <TextView
                    android:id="@+id/require_type"
                    style="@style/WideItemMiddleRight.Text"
                    android:gravity="left"
                    android:text="@string/select_type"
                    />

                <ImageView style="@style/WideItemRightArrow"
                    />
            </LinearLayout>

            <View style="@style/WideItemDivider"
                android:layout_marginRight="0dp"/>

            <LinearLayout
                style="@style/WideItem"
                android:paddingLeft="20dp">

                <TextView
                    style="@style/WideItemLeftText"
                    android:layout_width="100dp"
                    android:text="@string/buy_place" />

                <TextView
                    android:id="@+id/buy_place"
                    style="@style/WideItemMiddleRight.Text"
                    android:gravity="left"
                    android:text="@string/select_place"
                    />

                <ImageView style="@style/WideItemRightArrow"
                    />
            </LinearLayout>

            <View style="@style/WideItemDivider"
                android:layout_height="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                />
            <LinearLayout
                style="@style/WideItem"
                android:paddingLeft="20dp">


                <TextView
                    android:id="@+id/address"
                    style="@style/WideItemLeftText"
                    android:layout_weight="1"
                    android:text="@string/add_address"
                    android:drawableLeft="@mipmap/ic_release_positioning"
                    android:drawablePadding="2dp"
                    android:gravity="bottom"
                    />
                <ImageView style="@style/WideItemRightArrow"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/line_divider"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/require_warn"
                android:textColor="@color/txt_gray"
                android:textSize="@dimen/txt_size_13" />
            <LinearLayout
                style="@style/WideItem"
                android:paddingLeft="20dp">


                <TextView
                    style="@style/WideItemLeftText"
                    android:text="@string/identify_send"
                    />
                <TextView
                    style="@style/WideItemMiddleRight.Text"
                    />

                <CheckBox style="@style/CommonToggleButton"
                    android:id="@+id/identify_send"
                    />
            </LinearLayout>

            <View style="@style/WideItemDivider"
                android:layout_height="20dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/publish_frame"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <Button
            android:id="@+id/publish"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/CommonButton"
            android:text="@string/publish_ok"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:enabled="false"
            />
    </FrameLayout>

</RelativeLayout>
