<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="517dp"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@color/btn_bg_normal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/require_cancel_warning"
                android:textColor="@color/txt_main"
                android:textSize="@dimen/txt_size_13"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/user_avatar"
            android:layout_marginTop="60dp"
            />

        <TextView
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:text="@string/require_cancel_tip"
            android:textSize="@dimen/txt_size_13"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/cancel_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/CommonButton"
            android:text="@string/cancel_no"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="57dp"
            android:layout_marginBottom="20dp"
            android:enabled="true"
            />

        <TextView
            android:id="@+id/cancel_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_confirm"
            android:textSize="@dimen/txt_size_13"
            android:textColor="@color/txt_gray"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/txt_size_13"
        android:textColor="@color/txt_price"
        android:layout_centerHorizontal="true"
        android:text="@string/require_cancel_rule"/>

</RelativeLayout>
