<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_my_account_settings"
                style="@style/WideItem.Text.WithArrow"
                android:text="@string/account_settings" />

            <View style="@style/WideItemDivider" />


            <TextView
                android:id="@+id/tv_my_message_settings"
                style="@style/WideItem.Text.WithArrow"
                android:text="@string/message_settings" />

            <View style="@style/WideItemDivider" />


            <LinearLayout
                android:id="@+id/tv_my_change_theme"
                style="@style/WideItem">

                <TextView
                    style="@style/WideItemLeftText"
                    android:text="@string/change_theme" />

                <TextView
                    android:id="@+id/tv_my_current_theme"
                    style="@style/WideItemMiddleRightText"
                    android:text="主题2"
                    tools:text="主题2" />
            </LinearLayout>

            <View style="@style/WideItemDivider" />


            <LinearLayout
                android:id="@+id/tv_my_clear_cache"
                style="@style/WideItem">

                <TextView
                    style="@style/WideItemLeftText"
                    android:text="@string/clear_cache" />

                <TextView
                    android:id="@+id/tv_my_cache_size"
                    style="@style/WideItemMiddleRightText"
                    android:text="120MB"
                    tools:text="120MB" />
            </LinearLayout>

            <View style="@style/WideItemDivider" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_my_about_us"
                    style="@style/WideItem.Text.WithArrow"
                    android:text="@string/about_us" />

                <TextView
                    android:id="@+id/tv_my_version_code"
                    style="@style/WideItemMiddleRightText"
                    android:text="v1.0.0"
                    tools:text="v1.0.0" />
            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
